fix/jquery-minify/css align-items : center

--- a/assets/css/invoice_admin.css
+++ b/assets/css/invoice_admin.css
@@ -6,7 +6,7 @@
 .invoicePlusButtonContainer {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   gap: 10px;
 }
 
